<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="parse_app_id" translatable="false">myappID</string>
    <string name="parse_client_key" translatable="false">w1rW9cCKZBlY</string>

    <string name="app_name">Fake Instagram</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="or_login">or Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_password">Your password</string>
    <string name="enter_your_username">Your username</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="author">Ján Kluka 5ZY021</string>
    <string name="enter_your_email_optional">Your email</string>
    <string name="invalid_input">Username or password cannot be empty!</string>
    <string name="sign_up_success">Sign up successful!</string>
    <string name="sign_up_fail">Account already exists for this username!</string>
    <string name="login_success">Login successful!</string>
    <string name="login_fail">Invalid credentials!</string>
    <string name="btn_login">Login</string>
    <string name="or_signup_txt">or Sign Up</string>
    <string name="btn_signup">Sign Up</string>
    <string name="or_login_txt">or Login</string>
    <string name="users">Users</string>
    <string name="img_upload_success">Image uploaded!</string>
    <string name="img_upload_failed">Upload failed! Please try again.</string>
    <string name="parse_server_link" translatable="false">http://15.188.194.98:80/parse/</string>
    <string name="user_feed_title">%1$s\'s Feed</string>
    <string name="logout_success">Successfully logged out!</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_image">Add Image</string>
    <string name="slovak" translatable="false">Slovenský</string>
    <string name="english" translatable="false">English</string>
    <string name="language_change">Language changed!</string>
    <string name="logout_failed">Logout Failed! Please try again.</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="notification_user_upload">User %1$s has uploaded a new photo!</string>
    <string name="refresh">Refresh</string>
    <string name="img_upload_progress">Uploading...</string>
</resources>
